[WO-125] Business precondition guards for lifecycle transitions